--- a/resttest/pom.xml
+++ b/resttest/pom.xml
@@ -29,6 +29,21 @@
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -59,7 +74,7 @@
                 <artifactId>cargo-maven2-plugin</artifactId>
                 <configuration>
                     <container>
-                        <containerId>tomcat6x</containerId>
+                        <containerId>tomcat8x</containerId>
                         <home>/Users/ritesh/Documents/apache-tomcat-8.5.23</home>
                     </container>
                     <configuration>
@@ -67,10 +82,8 @@
                             <!-- uncomment if you want to manually run cargo on port 8080 using mvn cargo:run -->
                             <cargo.servlet.port>8080</cargo.servlet.port>
                             <!-- uncomment if you want to debug the locally running instance on port 8787 after using mvn cargo:run -->
-                            <!-- <cargo.jvmargs>-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n -Xms512m -Xmx1024m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC</cargo.jvmargs> -->
+                             <cargo.jvmargs>-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n -Xms512m -Xmx1024m -XX:MaxPermSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC</cargo.jvmargs>
                             <!-- uncomment all ports when not running locally with mvn cargo:run -->
-
-                            <cargo.logging>low</cargo.logging>
                         </properties>
                     </configuration>
                     <deployables>
