--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,18 @@
                 <artifactId>google-collections</artifactId>
                 <version>1.0-rc2</version>
             </dependency>
-
+			<dependency>
+    				<groupId>org.glassfish.jersey.media</groupId>
+    				<artifactId>jersey-media-moxy</artifactId>
+    				<version>2.26</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+			<dependency>
+    				<groupId>com.google.code.gson</groupId>
+    				<artifactId>gson</artifactId>
+    				<version>2.8.2</version>
+			</dependency>
+			
             <dependency>
                 <groupId>org.codehaus.jettison</groupId>
                 <artifactId>jettison</artifactId>
