415 for put operation

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -38,6 +38,12 @@
             <scope>compile</scope>
         </dependency>
 
+		<dependency>
+    			<groupId>com.google.code.gson</groupId>
+    			<artifactId>gson</artifactId>
+    			<scope>compile</scope>
+		</dependency>
+		
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
