--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
     				<artifactId>jersey-media-moxy</artifactId>
     				<version>2.26</version>
 			</dependency>
+			<dependency>
+    				<groupId>com.sun.jersey</groupId>
+    				<artifactId>jersey-json</artifactId>
+    				<version>1.17.1</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client -->
 			<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 			<dependency>
     				<groupId>com.google.code.gson</groupId>
