--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,10 @@
             <param-name>javax.ws.rs.Application</param-name>
             <param-value>server.application.CustomerRelationshipManagementApplication</param-value>
         </init-param>
+        <init-param>
+			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+			<param-value>true</param-value>
+		</init-param>
     </servlet>
 
     <servlet-mapping>
