--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -28,6 +28,11 @@
     				<groupId>com.sun.jersey</groupId>
     				<artifactId>jersey-json</artifactId>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-server -->
+<dependency>
+    <groupId>com.sun.jersey</groupId>
+    <artifactId>jersey-server</artifactId>
+</dependency>
 
         <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-core -->
         <dependency>
